--- a/src/test/kotlin/constants/devices.props
+++ b/src/test/kotlin/constants/devices.props
@@ -2,9 +2,9 @@
 #iOS
 IOS_PLATFORM_VERSION=16
 IOS_DEVICE_NAME=iPhone Xr
-IOS_UDID=00008020-001814402E05002E
+IOS_IPA=00008020-001814402E05002E
 
 #AOS
-AOS_PLATFORM_VERSION=12
-AOS_DEVICE_NAME=Pixel_4_APIum
-AOS_UDID=emulator-5554
+AOS_PLATFORM_VERSION=9.0
+AOS_DEVICE_NAME=Google Pixel 3
+AOS_APK=bs://c9a6e31e18282a2697a51317972655e97011ee8e
