first test in ios browserstack

--- a/src/test/kotlin/constants/devices.props
+++ b/src/test/kotlin/constants/devices.props
@@ -1,8 +1,8 @@
 
 #iOS
-IOS_PLATFORM_VERSION=16
-IOS_DEVICE_NAME=iPhone Xr
-IOS_IPA=00008020-001814402E05002E
+IOS_PLATFORM_VERSION=12
+IOS_DEVICE_NAME=iPhone 8
+IOS_IPA=bs://52437b5004dcaf51fb93bcf405bbfe7818efb4f9
 
 #AOS
 AOS_PLATFORM_VERSION=9.0
