add local run on simulator/real devices

--- a/src/test/kotlin/constants/devices.props
+++ b/src/test/kotlin/constants/devices.props
@@ -1,10 +1,11 @@
 
 #iOS
-IOS_PLATFORM_VERSION=12
-IOS_DEVICE_NAME=iPhone 8
-IOS_IPA=bs://52437b5004dcaf51fb93bcf405bbfe7818efb4f9
+IOS_PLATFORM_VERSION=16
+IOS_DEVICE_NAME=iPhone Xr
+IOS_UDID=00008020-001814402E05002E
 
 #AOS
-AOS_PLATFORM_VERSION=9.0
-AOS_DEVICE_NAME=Google Pixel 3
+AOS_PLATFORM_VERSION=12.0
+AOS_DEVICE_NAME=Pixel_4_APIum
+AOS_UDID=emulator-5554
 AOS_APK=bs://c9a6e31e18282a2697a51317972655e97011ee8e
