--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,11 @@
             <artifactId>browserstack-java-sdk</artifactId>
             <version>LATEST</version>
         </dependency>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>5.3.0</version>
+        </dependency>
 
     </dependencies>
 
