--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
     </properties>
 
     <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
 
         <repository>
             <id>jitpack.io</id>
@@ -145,6 +149,12 @@
             <artifactId>rest-assured</artifactId>
             <version>4.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.codepine.api</groupId>
+            <artifactId>testrail-api-java-client</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -153,10 +163,11 @@
             <scope>provided</scope>
         </dependency>
 
+
         <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-json-org</artifactId>
-            <version>2.9.0</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.5</version> <!-- Замените на последнюю версию Jackson -->
         </dependency>
 
         <dependency>
