--- a/src/test/kotlin/constants/devices.props
+++ b/src/test/kotlin/constants/devices.props
@@ -9,3 +9,11 @@ AOS_PLATFORM_VERSION=12.0
 AOS_DEVICE_NAME=Pixel_4_APIum
 AOS_UDID=emulator-5554
 AOS_APK=bs://c9a6e31e18282a2697a51317972655e97011ee8e
+
+#SECRET_KEYS
+botToken=5883152658:AAFJUFvuzncaVG0HBaS60pL0ak1pXhA7Guk
+chatId=303973918
+APIClient=https://sidakalex.testrail.io/
+setUser=ts285jut@gmail.com
+setPassword=Qwerty_12345
+apiKey=E6LpuxIKPxjyIcS.KJDo-/mT.QzfjDH6Anzj/Irx8
