--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.12.5</version> <!-- Замените на последнюю версию Jackson -->
         </dependency>
+        <dependency>
+            <groupId>com.github.Visual-Regression-Tracker</groupId>
+            <artifactId>sdk-java</artifactId>
+            <version>4.5.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.testng</groupId>
