--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
                         <suiteXmlFiles>
-                            <suiteXmlFile>src/test/resources/testng/sample-test.testng.xml</suiteXmlFile>
+                            <suiteXmlFile>sample-test.testng.xml</suiteXmlFile>
                         </suiteXmlFiles>
                     </configuration>
                 </plugin>
