--- a/pom.xml
+++ b/pom.xml
@@ -251,9 +251,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
+                        <skipTests>false</skipTests>
                         <suiteXmlFiles>
                             <suiteXmlFile>sample-test.xml</suiteXmlFile>
                         </suiteXmlFiles>
+                        <testFailureIgnore>true</testFailureIgnore>
                     </configuration>
                 </plugin>
             </plugins>
