--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
                     <jvmTarget>1.8</jvmTarget>
                 </configuration>
             </plugin>
+                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.2</version> <!-- Укажите версию плагина Maven Surefire -->
+                </plugin>
 
             <plugin>
                 <groupId>io.qameta.allure</groupId>
