--- a/pom.xml
+++ b/pom.xml
@@ -58,11 +58,18 @@
                     <jvmTarget>1.8</jvmTarget>
                 </configuration>
             </plugin>
-                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version> <!-- Укажите версию плагина Maven Surefire -->
-                </plugin>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <!--suppress UnresolvedMavenProperty -->
+                        <suiteXmlFile>${SuiteXmlFile}.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>io.qameta.allure</groupId>
